Bug 390748 - When downloading multiple files, Download Manager doesn't show files it has queued.  r=mano, a=blocking-firefox3