toolkit/components/downloads/src/nsDownloadManager.cpp
@@ -740,6 +740,7 @@ nsDownloadManager::AddDownload(DownloadType aDownloadType,
   dl->mID = id;
 
   rv = AddToCurrentDownloads(dl);
+  (void)dl->SetState(nsIDownloadManager::DOWNLOAD_QUEUED);
   NS_ENSURE_SUCCESS(rv, rv);
 
   NS_ADDREF(*aDownload = dl);
@@ -842,8 +843,6 @@ nsDownloadManager::RetryDownload(PRUint32 aID)
   dl->mDownloadManager = this;
 
   dl->SetStartTime(PR_Now());
-  rv = dl->SetState(nsIDownloadManager::DOWNLOAD_NOTSTARTED);
-  NS_ENSURE_SUCCESS(rv, rv);
 
   nsCOMPtr<nsIWebBrowserPersist> wbp =
     do_CreateInstance("@mozilla.org/embedding/browser/nsWebBrowserPersist;1", &rv);
@@ -855,12 +854,28 @@ nsDownloadManager::RetryDownload(PRUint32 aID)
 
   rv = wbp->SetPersistFlags(nsIWebBrowserPersist::PERSIST_FLAGS_REPLACE_EXISTING_FILES |
                             nsIWebBrowserPersist::PERSIST_FLAGS_AUTODETECT_APPLY_CONVERSION);
-  NS_ENSURE_SUCCESS(rv, rv);
+  if (NS_FAILED(rv)) {
+    dl->mCancelable = nsnull;
+    (void)wbp->SetProgressListener(nsnull);
+    return rv;
+  }
 
   rv = AddToCurrentDownloads(dl);
-  NS_ENSURE_SUCCESS(rv, rv);
+  if (NS_FAILED(rv)) {
+    dl->mCancelable = nsnull;
+    (void)wbp->SetProgressListener(nsnull);
+    return rv;
+  }
+  (void)dl->SetState(nsIDownloadManager::DOWNLOAD_QUEUED);
 
-  return wbp->SaveURI(dl->mSource, nsnull, nsnull, nsnull, nsnull, dl->mTarget);
+  rv = wbp->SaveURI(dl->mSource, nsnull, nsnull, nsnull, nsnull, dl->mTarget);
+  if (NS_FAILED(rv)) {
+    dl->mCancelable = nsnull;
+    (void)wbp->SetProgressListener(nsnull);
+    return rv;
+  }
+
+  return NS_OK;
 }
 
 NS_IMETHODIMP
@@ -1337,7 +1352,7 @@ nsDownload::OnProgressChange64(nsIWebProgress *aWebProgress,
   if (!mRequest)
     mRequest = aRequest; // used for pause/resume
 
-  if (mDownloadState == nsIDownloadManager::DOWNLOAD_NOTSTARTED) {
+  if (mDownloadState == nsIDownloadManager::DOWNLOAD_QUEUED) {
     nsresult rv = SetState(nsIDownloadManager::DOWNLOAD_DOWNLOADING);
     NS_ENSURE_SUCCESS(rv, rv);
     mDownloadManager->mObserverService->NotifyObservers(this, "dl-start", nsnull);
